--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ under the License.
     <url>https://github.com/arkanovicz/essential-json</url>
     <licenses>
         <license>
-            <name>Apache Licence</name>
+            <name>Apache Licence 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
@@ -54,7 +54,7 @@ under the License.
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.13.1</junit.version>
-        <slf4j.version>1.7.28</slf4j.version>
+        <slf4j.version>1.7.32</slf4j.version>
         <servlet.version>3.1.0</servlet.version>
     </properties>
     <distributionManagement>
